--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-h5-audio-player": "^3.10.0",
     "sanity": "^3.92.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
