--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "next dev",
+    "build": "next build ",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -23,6 +23,7 @@
     "motion": "^12.18.1",
     "next": "15.3.3",
     "next-sanity": "^9.12.0",
+    "ogl": "^1.0.11",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
